--- a/google/index.html
+++ b/google/index.html
@@ -4,6 +4,29 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    google
+    <ul class="navbar" style="display:inline">
+      <li class="li">+You</li><li class="li">Gmail</li><li class="li">Images</li>
+    </ul>
+    <center>
+    <div class="center">
+      <table>
+      <tr><td>
+      <a href="https://www.google.com/"><img src="googlelogo.png"></img></a> </td></tr>
+      <tr><td>
+        <input type="text" class="searchbox"></input>
+      </td></tr>
+        <tr>
+          <td>
+        <p><center><button type="submit" class="button">Search</button><button type="submit" class="button">I'm Feeling Lucky</button></center></p>
+      </td></tr>
+  </table>
+  </div>
+  </center>
+  <center>
+  <div>
+<!--     <input type="text" class="searchbox"></input>
+    <p><button type="submit" class="button">Search</button><button type="submit">I'm Feeling Lucky</button></p> -->
+  </div>
+</center>
   </body>
 </html>
